autotests/syntax-tests/tests/negative/negative95.sref
Name { Name Name , Name $LABEL Name Name : { } : , : = : = ;
= ; } ; 